[package]
name = "presutaoru"
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["チセ <123655015+chise0713@users.noreply.github.com>"]
repository = "https://github.com/chise0713/presutaoru"
readme = true
license = "MIT OR Apache-2.0"
description = "A linux Pressure Stall Information (PSI) file descriptor wrapper / monitor library for Rust."
categories = ["os", "os::linux-apis", "os::android-apis"]
keywords = ["psi", "epoll", "tokio", "linux", "android"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "presutaoru"
path = "src/lib.rs"

[features]
default = []
monitor = []
thread = ["nix/event", "monitor"]
tokio = ["tokio/rt", "tokio/net", "tokio/sync", "monitor"]

[[example]]
name = "monitor"
required-features = ["thread"]

[[example]]
name = "monitor_tokio"
required-features = ["tokio"]

[dependencies]
thiserror = "^1.0"
rustc-hash = "^2.1"
libc = "^0.2"
nix = { version = "^0.30", features = ["event"], optional = true }
tokio = { version = "^1.0", features = ["rt", "net", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "^1.0", features = ["rt", "macros"] }
