[package]
name = "presutaoru"
version = "0.1.0-alpha.6"
edition = "2021"
rust-version = "1.71.1"
authors = ["チセ <123655015+chise0713@users.noreply.github.com>"]
repository = "https://github.com/chise0713/presutaoru"
readme = true
license = "MIT OR Apache-2.0"
description = "A linux Pressure Stall Information (PSI) file descriptor wrapper library for Rust."
categories = ["os", "os::linux-apis", "os::android-apis"]
keywords = ["psi", "epoll", "tokio", "linux", "android"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "presutaoru"
path = "src/lib.rs"

[features]
default = []

[[example]]
name = "epoll"

[[example]]
name = "tokio"

[dependencies]
thiserror = "^2.0"

[dev-dependencies]
nix = { version = "^0.31", features = ["event"] }
tokio = { version = "^1.0", features = ["rt", "net", "sync", "macros"] }
